Fixed spacing issues.

--- a/css/base.css
+++ b/css/base.css
@@ -11,7 +11,7 @@ body {
     font-family: helvetica, arial, sans-serif;
     font-size: 16px;
     font-weight: 400;
-    /*line-height: 24px;*/
+    line-height: 24px;
     max-width: 1000px;
     margin: auto;
 }
